Parse config from TOML file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ project(scheduler)
 add_executable(schedule.o schedule.cpp scheduler.cpp nfl.cpp)
 
 find_package(PkgConfig REQUIRED)
+find_package(LibXml2 REQUIRED)
+include_directories(${LIBXML2_INCLUDE_DIR} extern/toml)
 
 TARGET_LINK_LIBRARIES(schedule.o -lcurl -lxml2)
